# e-comet-tz

./: .gitignore  Dockerfile  README  README.md  create_tables.sql  docker-compose.yml  pyproject.toml
src/: api.py  main.py  managers.py  schemas.py
yandex-cloud/: .env.template  upload_function_to_yc.bash
yandex-cloud/source/: index.py  requirements.txt
