[tool.poetry]
name = "e-comet-tz"
version = "0.1.0"
description = ""
authors = ["Ainur Rakhmanov <ainur-205@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
